@@ -945,6 +945,31 @@ The width in pixels given to the borders of transient or pop-up windows.
 The width in pixels given to the borders of regular windows.
 @end defvar
 
+@defvar *window-border-style*
+This controls the appearance of the border around windows. valid
+values are:
+@table @var
+@item :thick
+All space within the frame not used by the window is dedicated to the
+border.
+
+@item :thin
+Only the border width as controlled by *maxsize-border-width*
+*normal-border-width* and *transient-border-width* is used as the
+border. The rest is filled with the unfocus color.
+
+@item :tight
+The same as :thin but the border surrounds the window and the wasted
+space within the frame is not obscured, revealing the background.
+
+@item :none
+Like :tight but no border is ever visible.
+@end table
+
+After changing this variable you may need to call
+sync-all-frame-windows to see the change.
+@end defvar
+
 
 @defun set-win-bg-color COLOR
 Set the background color of the window. The background color will only
@@ -1437,7 +1462,7 @@ such a case, kill the shell command to resume StumpWM.
 @end deffn
 
 
-@defun programs-in-path BASE &OPTIONAL FULL-PATH (PATH (SPLIT-STRING (GETENV PATH) :))
+@defun programs-in-path &OPTIONAL FULL-PATH (PATH (SPLIT-STRING (GETENV PATH) :))
 Return a list of programs in the path that start with @var{base}. if
 @var{full-path} is @var{t} then return the full path, otherwise just
 return the filename. @var{path} is by default the @env{PATH}
