@@ -3,6 +3,8 @@
 This file documents user visible changes between versions of StumpWM
 
 * Changes since 0.9.2
+** new variable *window-border-style*
+
 ** new command exchange-windows
 
 ** new command type :direction
